# mcp-next-ai-draw-io

./: .gitignore  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  README.md.old  README_CN.md  README_CN.md.old  demo.py  demo_label_positioning.py  demo_workflow.md  diagram_operations.py  history.py  http_server.py  mcp_drawio_server.py  pyproject.toml  requirements.txt  test_file_operations.py  test_functionality.py  test_label_positioning.py
