[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-drawio-server"
version = "0.1.0"
description = "MCP server for Draw.io diagram generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.23.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
mcp-drawio-server = "mcp_drawio_server:main"

[tool.setuptools]
py-modules = ["mcp_drawio_server"]
